updated phone number

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=http://localhost:1337/api
-REACT_APP_SERVER_URL=http://localhost:1337
+REACT_APP_API_URL=https://api.sustainaeon.com/api
+REACT_APP_SERVER_URL=https://api.sustainaeon.com
