--- a/package.json
+++ b/package.json
@@ -2,9 +2,6 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "reactSnap": {
-    "inlineCss": true
-  },
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -25,7 +22,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && react-snap",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
